# os2mo-graphql-subscriptions

./: .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.reuse/: dep5
os2mo_graphql_subscriptions/: config.py  main.py
tests/: conftest.py
